<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.unama.apppedepizza.Tela1">

    <TextView
        android:text="@string/txt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_nome" />

    <TextView
        android:text="@string/txt_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_endereco" />

    <TextView
        android:text="@string/txt_sabor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spin_sabor"
        android:entries="@array/lista_sabores" />

    <TextView
        android:text="@string/txt_tamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rg_tamanho">

        <RadioButton
            android:text="@string/txt_pequena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_pequena"
            android:layout_weight="1"
            android:layout_marginRight="20dp" />

        <RadioButton
            android:text="@string/txt_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_media"
            android:layout_weight="1"
            android:layout_marginRight="20dp" />

        <RadioButton
            android:text="@string/txt_grande"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_grande"
            android:layout_weight="1" />
    </RadioGroup>

    <Switch
        android:text="@string/txt_refrigerante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sw_refrigerante"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/txt_avaliacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate_pedido" />
</LinearLayout>
