<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.unama.apppedepizza.Tela2">

    <TextView
        android:text="@string/txt_dados_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tela2_nome"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tela2_endereco"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:text="@string/txt_produtos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tela2_pizza"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tela2_refrigerante"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:text="@string/txt_valor_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tela2_valor"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/txt_avaliacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tela2_avalicao"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textAlignment="center" />
</LinearLayout>
